--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #e2e2e2;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #008080;
             padding: 10px 20px;
             display: flex;
             align-items: center;
