--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <header>
         <img src="https://www.bharatbiotech.com/images/bharat-biotech-logo.jpg" alt="Company Logo" class="logo">
     </header>
-     <h1>Employee Task List</h1>
+     <h1>Corporate Communications - Employee Task List</h1>
     <div class="container">
         <form id="employeeForm">
             <label for="employeeID">Enter Employee ID:</label>
