--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             color: white;
         }
         .logo {
-            height: 80px; /* Adjust the height as needed */
+            height: 120px; /* Adjust the height as needed */
             margin-right: 20px;
         }
         .container {
@@ -79,7 +79,7 @@
     <header>
         <img src="https://www.bharatbiotech.com/images/bharat-biotech-logo.jpg" alt="Company Logo" class="logo">
     </header>
-     <h1 align="centre">Corporate Communications - Employee Task List</h1>
+     <h1 style="text-align: center;">Corporate Communications - Employee Task List</h1>
     <div class="container">
         <form id="employeeForm">
             <label for="employeeID">Enter Employee ID:</label>
