--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             fetch(apiUrl)
                 .then(response => response.text())
                 .then(data => {
-                    document.getElementById('data-container').innerHTML = data;
+                    document.getElementById('cardContainer').innerHTML = data;
                     populatePopupTable();
                 })
                 .catch(error => {
