--- a/index.html
+++ b/index.html
@@ -142,12 +142,7 @@
     <div id="removePopup" class="popup">
         <h3>Remove Task</h3>
         <table id="popupTable">
-            <thead>
-                <tr>
-                    <th>Task</th>
-                    <th>Remove</th>
-                </tr>
-            </thead>
+            <thead></thead>
             <tbody id="popupTaskList">
                 <!-- Tasks will be populated here -->
             </tbody>
