--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <header>
         <img src="https://www.bharatbiotech.com/images/bharat-biotech-logo.jpg" alt="Company Logo" class="logo">
     </header>
-     <h1>Ramita Task List</h1>
+     <h1 style="text-align: center;">Ramita Task List</h1>
     <div id="cardContainer">
             <!-- Task cards from Lambda will be inserted here -->
         </div>
